--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,16 @@ services:
       - "5005:5000"
     volumes:
       - .:/app
+    depends_on:
+      - db
+    env_file:
+      - ./.env
+  db:
+    image: postgres
+    environment:
+      - POSTGRES_PASSWORD=password
+      - POSTGRES_DB=chatwizard
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+volumes:
+  postgres_data:
