--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - db
     env_file:
       - ./.env
+    environment:
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
   db:
     image: postgres
     environment:
