--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
     environment:
       - POSTGRES_PASSWORD=password
       - POSTGRES_DB=chatwizard
+    ports:
+      - "5440:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
 volumes:
